--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
     <title>Category Detail</title>
 </head>
 <body style="background-color: black; color: white;">
-    <form th:action="@{/public/createMenu}" th:object="${foodItem}" method="post" enctype="multipart/form-data">
+    <form th:action="@{/public/createVariant}" th:object="${foodVariant}" method="post" >
 		<label for="name">Name:</label>
 		<input type="text" id="name" th:field="*{name}" required>
 		<br>
@@ -14,24 +14,16 @@
 		<input type="number" min="0" step="0.01" id="price" th:field="*{price}" required>
 		<br>
 		<br>
-		<label for="description">Description:</label>
-		<input type="text" id="description" th:field="*{description}" required>
-		<br>
-		<br>
-		<label for="imageUrl">Image:</label>
-		<input type="file" id="imageUrl" th:field="*{image}" required>
-		<br>
-		<br>
-		<label for="category">Category: </label>
-		<select th:field="*{categoryId}" required>
-			<option th:each="category:${categories}" 
-					th:text="${category.name}"
-					th:value="${category.id}">
+		<label for="FoodItem">FoodItems: </label>
+		<select th:field="*{foodItemId}" required>
+			<option th:each="item:${FoodItems}" 
+					th:text="${item.name}"
+					th:value="${item.id}">
 			</option>
 		</select>
 		<br>
 		<br>
-		<button type="submit">Add Menu item</button>
+		<button type="submit">Add FoodVariant</button>
 	</form>	
 </body>
 </html>
